# phylib

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
deprecated/: requirements-dev.txt  requirements.txt  setup.py
phylib/: __init__.py  conftest.py
phylib/electrode/: layout.py  mea.py
phylib/electrode/tests/: test_layout.py  test_mea.py
phylib/io/: __init__.py  alf.py  array.py  datasets.py  loader.py  merge.py  mock.py  model.py  tmodel.py  traces.py
phylib/io/tests/: conftest.py  test_alf.py  test_array.py  test_datasets.py  test_loader.py  test_merge.py  test_mock.py  test_model.py  test_tmodel.py  test_traces.py
phylib/stats/: ccg.py  clusters.py
phylib/stats/tests/: test_ccg.py  test_clusters.py
phylib/traces/: waveform.py
phylib/traces/tests/: test_waveform.py
phylib/utils/: __init__.py  _color.py  _misc.py  _types.py  color.py  event.py  geometry.py  testing.py
phylib/utils/tests/: test_color.py  test_event.py  test_geometry.py  test_misc.py  test_testing.py  test_types.py
